# go-green

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/go_green/: __init__.py  __main__.py  cli.py  commit_generator.py
